edition = "2023";

import "google/protobuf/empty.proto";

package gophkeeper;

option go_package = "gophkeeper.v1;gophkeeperv1";

// TODO: переименовать
message AuthorizationRequest {
  string login = 1;
  string password = 2;
}

message AuthorizationResponse {
  string token = 1;
}

service AuthorizationService {
  rpc Authorize(AuthorizationRequest) returns (AuthorizationResponse);
  rpc Register(AuthorizationRequest) returns (google.protobuf.Empty);
}